--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1271,11 +1271,12 @@ sl          = "Slovene"
 ar          = "Arabic"
 bn          = "Bengali"
 gl          = "Galician"
+fa          = "فارسی"
 
 ; This section contains special cases for languages such as right-to-left support
 [LanguageSettings]
 ; Comma-separated list of languages to display in right-to-left mode
-rtl_langs = "ar,he"
+rtl_langs = "ar,he,fa"
 
 ; This section controls the behavior of the Browse module.  The result_limit
 ; setting controls the maximum number of results that may display in any given
